[gd_scene load_steps=6 format=2]

[ext_resource path="res://png/char.png" type="Texture" id=1]
[ext_resource path="res://HERO/HERO.gd" type="Script" id=2]
[ext_resource path="res://png/slam.png" type="Texture" id=3]
[ext_resource path="res://png/jump.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "slam",
"speed": 5.0
} ]

[node name="Hero" type="Node2D"]
position = Vector2( 420, 0 )
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"
offset = Vector2( 0, -16 )

[node name="PRINTER" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="cameraShakeTimer" type="Timer" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_right = 1000
smoothing_enabled = true
smoothing_speed = 23.0
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0

[node name="wallJumpTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="state" type="RichTextLabel" parent="."]
visible = false
margin_left = -48.0
margin_top = -91.0
margin_right = 165.0
margin_bottom = -64.0
text = "debugging"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="state2" type="RichTextLabel" parent="."]
visible = false
margin_left = -48.0
margin_top = -116.0
margin_right = 97.0
margin_bottom = -89.0
text = "falling
"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="state3" type="RichTextLabel" parent="."]
visible = false
margin_left = -48.0
margin_top = -148.214
margin_right = 97.0
margin_bottom = -121.214
text = "after
"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="state4" type="RichTextLabel" parent="."]
visible = false
margin_left = -48.0
margin_top = -177.431
margin_right = 97.0
margin_bottom = -150.431
text = "after
"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="aftershockTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="timeout" from="PRINTER" to="." method="_on_PRINTER_timeout"]
[connection signal="timeout" from="cameraShakeTimer" to="." method="_on_cameraShakeTimer_timeout"]
[connection signal="timeout" from="wallJumpTimer" to="." method="_on_wallJumpTimer_timeout"]
[connection signal="timeout" from="aftershockTimer" to="." method="_on_aftershockTimer_timeout"]
